# insights-mcp-server

./: README.md  pyproject.toml
src/insights_mcp_server/: __init__.py  mcp.py  server.py
src/insights_mcp_server/tools/: __init__.py  vmaas.py  vulnerability.py
