[project]
name = "insights-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrik Segedy", email = "psegedy@redhat.com" }
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "authlib>=1.5.2",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
insights-mcp-server = "insights_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "ruff>=0.11.5",
]
